<resources>
    <string name="app_name">BSCSFall2022App</string>
    <string name="uni_title">University of Central Punjab</string>
    <string name="cs_dept_text">CS Dept</string>
    <string name="se_depart_text">SE Dept</string>
    <string name="adp_dept_text">ADP</string>
    <string name="developed_by_unknown_tv">Developed by Unknown</string>
    <string name="enter_the_first_value_et">Enter the first value</string>
    <string name="enter_the_second_value_et">Enter the second value</string>
    <string name="calculate_btn">Calculate</string>
    <string name="result_tv">Result:</string>
    <string name="lecture_2_btn">Lecture 2</string>
    <string name="lecture_3_btn">Lecture 3</string>
    <string name="enter_the_info_here_hint">Enter the info here</string>
    <string name="send_data_btn">Send Data</string>
    <string name="our_data_tv">Our Data</string>
    <string name="lecture_4_btn">Lecture 4 Data Passing</string>
    <string name="lecture_4_adapter_btn">Lecture 4 Adapter Working</string>
    <string name="enter_the_message_here_et">Enter the message here</string>
    <string name="send_sms">SEND SMS</string>
    <string name="move_back_btn">Move Back</string>
    <string name="lecture_5_a_btn">Lecture 5 List Working</string>
    <string name="enter_the_car_name_here_et">Enter the car name here</string>
    <string name="enter_the_car_model_here_et">Enter the car model here</string>
    <string name="send_car_information_btn_text">Send Car Information</string>
    <string name="lecture_5_b_btn">Lecture 5 Serialization</string>
    <string name="lat_tv">LAT:</string>
    <string name="lng_tv">LANG:</string>
    <string name="get_location_btn">Get Location</string>
    <string name="lecture_6_a_btn">Lecture 6 Geo Location</string>
    <string name="address_tv">Address:</string>
    <string name="add_record_btn">Add Record</string>
    <string name="get_record_btn">Get Record</string>
    <string name="lecture_7_a_btn">Lecture 7 Room</string>


</resources>