<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/geo_working_main_rl"
    tools:context=".Lec6.GeoLocationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/geo_working_lat_tv"
        android:text="@string/lat_tv"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/geo_working_lang_tv"
        android:layout_below="@id/geo_working_lat_tv"
        android:text="@string/lng_tv"
        android:textSize="20sp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/geo_working_get_loc_btn"
        android:text="@string/get_location_btn"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/geo_working_lang_tv"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/geo_working_address_tv"
        android:layout_below="@id/geo_working_get_loc_btn"
        android:text="@string/address_tv"
        android:textSize="20sp"/>
</RelativeLayout>