<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_relative_layout"
    android:background="@color/uni_background"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/lec_2_btn"
        android:text="@string/lecture_2_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/lec_3_btn"
        android:text="@string/lecture_3_btn"
        android:layout_below="@id/lec_2_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/lec_4_btn"
        android:text="@string/lecture_4_btn"
        android:layout_below="@id/lec_3_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/lec_4_b_btn"
        android:text="@string/lecture_4_btn"
        android:layout_below="@id/lec_4_btn"/>

</RelativeLayout>